fix issue with recent posts not wrapping

--- a/blocks/recent-posts/recent-posts.css
+++ b/blocks/recent-posts/recent-posts.css
@@ -117,6 +117,7 @@
       position: relative;
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
       justify-content: space-between;
       gap: 30px;
       width: 95%;
